--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "eslint": "^2.13.1",
+    "execa": "^2.0.3",
     "fbjs-scripts": "^0.7.1",
     "jest": "^17.0.3",
     "jscodeshift": "^0.3.30",
+    "meow": "^5.0.0",
     "path": "^0.12.7"
   },
   "jest": {
